syntax = "proto3";
package cosmonaut.crowdfund.crowdfund;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "crowdfund/params.proto";
import "crowdfund/crowdfund.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/cosmonaut/crowdfund/x/crowdfund/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmonaut/crowdfund/crowdfund/params";
  }
  // Queries a Crowdfund by id.
	rpc Crowdfund(QueryGetCrowdfundRequest) returns (QueryGetCrowdfundResponse) {
		option (google.api.http).get = "/cosmonaut/crowdfund/crowdfund/crowdfund/{id}";
	}

	// Queries a list of Crowdfund items.
	rpc CrowdfundAll(QueryAllCrowdfundRequest) returns (QueryAllCrowdfundResponse) {
		option (google.api.http).get = "/cosmonaut/crowdfund/crowdfund/crowdfund";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetCrowdfundRequest {
	uint64 id = 1;
}

message QueryGetCrowdfundResponse {
	Crowdfund Crowdfund = 1 [(gogoproto.nullable) = false];
}

message QueryAllCrowdfundRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCrowdfundResponse {
	repeated Crowdfund Crowdfund = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
